# FYP-HeadCTScanAnalysis

./: .gitattributes  .gitignore  README.md  RESNET_50_TRAIN.py  ResNet50_model.h5  acc.txt  app.py  class_names.pkl  explainable_ai.py  pyproject.toml  requirements.txt  user_data.db
templates/: graph.html  index.html  results.html  userlog.html
