[project]
name = "fyp-brainctscananalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "flask>=3.1.1",
    "markdown>=3.8",
    "ollama>=0.4.8",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "tensorflow>=2.19.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]
